--- a/style.css
+++ b/style.css
@@ -1,19 +1,90 @@
 body{
-    background-color: green;
+    background-color:green;
+    margin: 0 auto;
 }
 
+/*
+Estilos de la caja del header. 
+*/
 .header{
-    width: 300px;
-    height: 72px;
     background-color: white;
-    margin: 0 auto;
+    height: 72px;
+    width: 600px;
     display: flex;
+    margin: 0 auto;
     align-items: center;
     justify-content: center;
+    font-family: "Roboto";
+    border-radius: 0px 0px 8px 8px;
+    position: fixed;
+    left: calc(50% - 300px);
+    top: 0;
 }
 
+/*
+Estilos de la caja del header que me permiten mostrarlos horizontales y espaciados al mismo tamaño. 
+*/
 .header nav{
     display: flex;
     width: 100%;
-    justify-content: space-around;
+    justify-content: space-around; 
+} 
+
+/*
+Estilos de los enlaces dentro del header.  
+*/
+.header a{
+    color: black;
+    text-decoration: none;
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    transition: 0.3s color; 
+    position: relative; 
 }
+
+/*
+Líneas rojas qué no se pa qué sirven. Preguntar  
+*/
+.header a::after{
+    content:"";
+    position: absolute;
+    height: 70px;
+    width: 2px;
+    background: red;
+    top: -17px;
+    right: -51px;
+}
+
+/*
+Estilos de los iconos dentro del header 
+*/
+.header i{
+    font-size: 24px;
+}
+
+/*
+Estilos de los enlaces dentro del header cuando se hace hover.
+*/
+.header a:hover{
+    color: green;
+}
+
+/*
+Estilos de caja de secciones. ¿Cómo le doy margen superior para que no se pegue a mi header?
+*/
+section{
+    margin: 82px 20px 20px 20px;
+    background-color: white; 
+    padding: 20px;
+    border-radius: 8px 8px 8px 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+}
+
+.image-profile{
+    border-radius: 50%;
+}
+
