--- a/style.css
+++ b/style.css
@@ -84,7 +84,45 @@ section{
     align-items: center; 
 }
 
+section ul{
+    list-style: none;
+    padding: 0;
+    display: flex;
+}
+
+section ul li{
+    display: flex;
+    margin: 0 5px;
+}
+
+.footer a{
+    display: flex;
+    margin: 0 5px;
+}
+
 .image-profile{
     border-radius: 50%;
 }
 
+.modal{
+    position: fixed;
+    top:0;
+    left: 0;
+    bottom:0;
+    right: 0;
+    z-index: 5;
+    width: 300px;
+    height: 180px;
+    margin: auto auto;
+    background:  gray;
+}
+
+.cerrar{
+    position: absolute;
+    top:0;
+    right:0;
+}
+
+.cerrado{
+display: none;
+}
